package at.technikum.tolanzeilinger.tourplanner.viewModel;

public interface ViewModel {
    void initializeView();
    void initializeEventListeners();
}
